flux/apps/base/pvr/sonarr/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pod-gateway
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
